--- a/source/Literaturverzeichnis.adoc
+++ b/source/Literaturverzeichnis.adoc
@@ -1,3 +1,5 @@
-Literaturverzeichnis
+[appendix]
+= Literaturverzeichnis
+[bibliography]
 
-Bishop, Bryan: Lucas and Spielberg on Storytelling in Games: «It’s not going to be Shakespear», https://www.theverge.com/2013/6/13/4427444/lucas-spielberg-storytelling-in-games-its-not-going-to-be-shakespeare-usc (Abegrufen am 13.01.2018)
+- [[[bishop]]], Bishop, Bryan: 'Lucas and Spielberg on Storytelling in Games', https://www.theverge.com/2013/6/13/4427444/lucas-spielberg-storytelling-in-games-its-not-going-to-be-shakespeare-usc (Abegrufen am 13.01.2018)
