pähnert aufgenommen LITVER

--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -60,3 +60,5 @@ Sie brauchen ein Bett, ein Dach über dem Kopf, etwas zu Essen und so weiter.
 Nun können dinge passieren die vom AI Storyteller vorgegeben sind.
 Zum Beispiel könnte ein Tier in der Umgebung wild werden und alles angreifen was ihm in die Quere kommt oder ein teil eines Raumschiffes stürzt ab und ein schwer verletzter ist mit dabei, dann kann man selber entscheiden was man tut tötet man das wild gewordene Tier oder versucht man es aus dem Weg zu gehen, Hilft man der verletzten Person und lässt sie laufen oder sperrt man sie ein um sie möglicherweise in sein Team zu holen.
 Wie man sieht gibt es tausende an möglichen Szenarien und der Spieler entscheidet immer selber wie er mit gewissen Situationen um geht und wie sich die Geschichte des Teams weiterentwickelt.
+
+== Der Einfluss von Film
