--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -65,14 +65,11 @@ Wie man sieht gibt es tausende an möglichen Szenarien und der Spieler entscheid
 
 Wie Pöhnert schreibt, gab es bereits eine 70-Jährige Film geschichte als die ersten Videospiele auftauchten.
 Die ersten Videospiele bedienen sich eines narrativen Rahmens, der den Spieler durch eine die Spielszenen ergänzende Geschichte animiert.
-Pöhnert sagt: "_Aufgrund der begrenzten technischen Möglichkeiten der frühen Spielcomputer wird die Handlung oder Spielsituation durch Bilder und Erläuterungen auf dem Spielautomaten dargestellt._"
-Sehr früh kamen dann Adaptionen Filmischer Standardsituationen, wie zum Beispiel der Angriff von auserirdischen in Space Invaders oder der Adaption der King Kong Filme im Spiel Donky Kong.
-Durch den Vertrieb von Heimkonsolen konnten nun komplexere Spielszenarien entwickelt werden, da man den Spielstand auf einer Heimkonsole abspeichern konnte.
-Das erste Videospiel-Adventure, Adventure, erinnert eher an einen interaktiven Roman als an einen Film, da hier aufgrund technischer Einschränkungen nicht mit einer grafischen Darstellung gearbeitet wurde, sondern nur mit Text.
-Jedoch erscheien bald Spiele mit einer Grafischen oberfkäche.
-Das auffälligste Merkmal der Videospiele zu diser zeit war die einfachheit der Grafik.
+Da die technischen Möglichkeiten begrenzt waren mussten die Spieler mit viel Fantasy aufwenden um sich die Geschichte vorzustellen.
+Früher konnte man die Charaktere nur mit einem Punkt darstellen während wir heute Schauspieler für Spiele haben.
+Das heisst früher musste man die Geschichten mit klötzen darstellen während wir heute Filmqualität in den Videospielen haben.
 
 Mit den immer besser werdender Technischen gegebenheiten finden sich heute in Videospielen immer längere und bessere Spielfilmartige Sequenzen.
 Diese Sequenzen nennt man auch 'Cutscenes', welche zur Belohnung des Spielers und auch der erzählung der Geschichte beitragen.
-Jedoch können in ein Interaktives Spiel eingebaute Filmische Effekte mehr spannung aufbauen als eine eingeschobener Videosequenz.
+Jedoch können in ein Interaktives Spiel eingebaute Filmische Effekte mehr spannung aufbauen als eine eingeschobene Videosequenz.
 Zum Beispiel durch gänge rasende Ich-Perspektiven in "DOOM" oder das Hoch und Hinabstürzen von Treppen in "Silent Hill".
