--- a/source/Von Dungons and Dragons zu RPG's.adoc
+++ b/source/Von Dungons and Dragons zu RPG's.adoc
@@ -3,13 +3,13 @@
 == Dungons and Dragons
 
 Ich denke fast jeder hat schonmal von "Dungons and Dragons" gehört.
-Wir verbiden es oft mit jungen Nerds die im Keller eingeschlossen mit ihren Freunden "Dungons und Dragons" spielen.
+Wir verbinden es oft mit jungen Nerds die im Keller eingeschlossen mit ihren Freunden "Dungons und Dragons" spielen.
 Nun was ist den dieses omimöse "Dungons and Dragons"?
 Es ist ein sogenantes Pen and Paper Rollenspiel und wie der Name schon verät spielt man es mit Papier und Stift.
 Der Spieler schlüpft in eine fiktive Rolle und erlebt mit seinen mit Spielern verschidene Abenteuer.
 Der Spielleiter ist wie der Erzähler in einem Buch oder Film und die Spieler verkörpern die Charaktere.
 Nun anstat das vorgegeben ist wie sich die Charaktere verhalten und was sie als nächstes tun entscheiden die Spieler selber was sie als nächstes machen.
-Man sieht klare zusammen hänge zu heuteigen Role-playing Games.
+Man sieht klare zusammenhänge zu heuteigen Role-playing Games.
 Wie wir bereits erklärten wird der Spieler zum Gestallter der Geschichte und erlebt die Geschichte gleichzeitig mit.
 
 == Role-playing Games
