--- a/source/index.adoc
+++ b/source/index.adoc
@@ -31,7 +31,7 @@ include::Fragestellung und Hypothese.adoc[]
 
 include::Motivation.adoc[]
 
-include::Von Dungeons and Dragons zu RPG's.adoc[]
+include::Dungeon_Dragon_RPG.adoc[]
 
 include::Interactive Fiction und Adventure.adoc[]
 
