--- a/source/Die Entstehung von Story in Videogames.adoc
+++ b/source/Die Entstehung von Story in Videogames.adoc
@@ -32,9 +32,9 @@ Der Spieler wird gezwungen schwere Entscheidungen zu treffen, die Charaktere das
 
 == Dungons and Dragons
 
-Ich denke fast jeder hat schonmal von "Dungons and Dragons" gehört.
+Ich denke fast jeder hat schonmal von "Dungeons and Dragons" gehört.
 Wir verbinden es oft mit jungen Nerds die im Keller eingeschlossen mit ihren Freunden "Dungons und Dragons" spielen.
-Nun was ist den dieses omimöse "Dungons and Dragons"?
+Nun was ist den dieses omimöse "Dungeons and Dragons"?
 Es ist ein sogenantes Pen and Paper Rollenspiel und wie der Name schon verät spielt man es mit Papier und Stift.
 Der Spieler schlüpft in eine fiktive Rolle und erlebt mit seinen mit Spielern verschidene Abenteuer.
 Der Spielleiter ist wie der Erzähler in einem Buch oder Film und die Spieler verkörpern die Charaktere.
