--- a/source/Fragestellung und Hypothese.adoc
+++ b/source/Fragestellung und Hypothese.adoc
@@ -7,7 +7,7 @@ Hat dieser Wunsch nach Neuem mit dem Alter der Spieler zu tun oder kann man das 
 Wenn dem so ist, wann hat dann diese neue Spiele-Ära begonnen und welche Altersgruppe ist am zufriedensten?
 All das versuchen wir in dieser Arbeit zu untersuchen und zu beantworten.
 Dafür definierten wir eine Leitfrage und legten uns auf einen Zeitraum fest, da es sonst zu viel geworden wäre.
-In unserem Fall lautet diese: Hat sich die Wichtigkeit der Story-Line der Games in den letzten 20 Jahren verändert?
+In unserem Fall lautet diese: Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert?
 Wir denken, dass vor allem die jüngeren Spieler lieber online mit ihren Freunden spielen und die älteren eher eine gute Geschichte geniessen möchten.
 Was den Wandel in der Branche angeht vermuten wir, dass die Industrie eher mit dem Online Trend mitfährt, da immer mehr Games neben der Story einen Online-Modus haben oder sogar nur Online zu spielen sind.
 Zu behaupten die Story sei gänzlich unwichtig geworden, würden wir nicht wagen, da dies absolut nicht der Fall ist.
