--- a/source/Die entwicklung von Storys in Videogames.adoc
+++ b/source/Die entwicklung von Storys in Videogames.adoc
@@ -7,3 +7,5 @@ Die Fragestellung lautet: Hat sich die Relevanz der Story-Line der Games in den 
 Um diese frage zu beantworten haben wir in unserer Umfrage verschiedene Fragen gestellt die zur beantwortung unserer Leitfrage dient.
 Um ein besseres Bild von den Befragten zu bekommen waren Fragen wie das Alter, seit wann sie Videospiele spielen, wie oft sie Spielen und wann sie angefangen haben Videospiele zu Spielen wichtig.
 Die Beantwortung unserer Leitfrage wurde von Fragen unterstütz wie welches Spiel hat die beste Story, wie wichtig ihnen Story in einem Videospiel ist, wie sie die Story gerne erleben und natürlich sind wie zufrienden sie mit der Story in heutigen Games sind.
+Wir haben den Link für die Umfrage in verscheidene Foren gestellt, Auf Twitter und Facebook verbreitet und es an Freunde und Familie geschickt.
+Insgesamt haben XY Personen an der Umfrage Teilgenommen.
