--- a/source/Die entwicklung von Storys in Videogames.adoc
+++ b/source/Die entwicklung von Storys in Videogames.adoc
@@ -1,11 +1,12 @@
-= Die entwicklung von Storys in Videogames
+= Die Entwicklung von Storys in Videogames
 
 ==
 
 Wie sie in unserem Thema Fragestellung und Hypothese bereits erfahren haben, haben wir uns die Aufgabe gestellt eine Umfrage zum Thema Story in Games zu machen.
 Die Fragestellung lautet: Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert?
-Um diese frage zu beantworten haben wir in unserer Umfrage verschiedene Fragen gestellt die zur beantwortung unserer Leitfrage dient.
-Um ein besseres Bild von den Befragten zu bekommen waren Fragen wie das Alter, seit wann sie Videospiele spielen, wie oft sie Spielen und wann sie angefangen haben Videospiele zu Spielen wichtig.
+Um diese Frage zu beantworten haben wir in unserer Umfrage verschiedene Fragen gestellt die zur beantwortung unserer Leitfrage dienten.
+Um ein besseres Bild der Befragten zu bekommen waren Fragen wie das Alter, seit wann sie Videospiele spielen, wie oft sie Spielen und wann sie angefangen haben Videospiele zu Spielen wichtig.
 Die Beantwortung unserer Leitfrage wurde von Fragen unterstütz wie welches Spiel hat die beste Story, wie wichtig ihnen Story in einem Videospiel ist, wie sie die Story gerne erleben und natürlich sind wie zufrienden sie mit der Story in heutigen Games sind.
 Wir haben den Link für die Umfrage in verscheidene Foren gestellt, Auf Twitter und Facebook verbreitet und es an Freunde und Familie geschickt.
-Insgesamt haben XY Personen an der Umfrage Teilgenommen.
+Insgesamt haben über 100 Personen an der Umfrage Teilgenommen.
+Uns ist bewusst das diese Umfrage nicht Representiv ist.
