--- a/source/Motivation.adoc
+++ b/source/Motivation.adoc
@@ -10,8 +10,8 @@ Da wir und deshalb viel Gaming Geschichte verpasst haben, ist uns die Idee gekom
 Wir waren beide zufrieden mit unserem Thema, merkten aber schnell, dass es viele Schwierigkeiten geben würde unser Thema so umzusetzen, aber wir wollten unser Thema weiter behandeln.
 Uns wurde klar, dass es nicht Funktionieren würde und machten uns auf die Suche nach einem neuen Thema.
 Wir hatten mehrere Ideen welche auch im Bereich Gaming waren.
-Wir wollten zum Beispiel etwas über E-Sports machen, jedoch waren unsere Meinung zu unterschiedlich und wir hätten keine Arbeit darüberschreiben können.
+Wir wollten zum Beispiel etwas über E-Sports machen, jedoch waren unsere Meinung zu unterschiedlich und wir hätten keine Arbeit darüber schreiben können.
 Eine Idee war es, die Produktion von Videogames zu untersuchen. Wir haben uns nun entschieden, die Story von Videogames untersuchen , indem wir verschiedene RPGs der letzten 10 Jahre anschauen.
 Schlussendlich haben wir zusammen mit unserer Betreuungsperson die Idee gehabt, die Meinung von Konsumenten zur Storyline in Games herauszufinden.
-Gleichzeitig wollen wir aufzeigen wie Storytelling in Games eine Kunstform sein kann und was genau die Storyline in Games ist.
-Von Anfang an wollten wir ein Interview oder eine Umfrage machen um unsere Arbeit zu unterstützen und dieses Thema ermöglichte dies. 
+Gleichzeitig wollen wir aufzeigen wie Storytelling in Games entstanden ist und was genau die Storyline in Games ist.
+Von Anfang an wollten wir ein Interview oder eine Umfrage machen um unsere Arbeit zu unterstützen und dieses Thema ermöglichte dies.
