--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -14,7 +14,7 @@ Schon als Kinder lieben wir es Geschichten zu hören.
 
 Games haben vielleicht mit Geschicklichkeit und Denkspielen angefangen jedoch sind Adventures sehr schnell dazu gekommen.
 Das erste bekannte Adventure ist 1975 erscheinen es ist ein reines Textadventure und heisst «Adventure».
-Später kamen weiter Textadventures besonders bekannt war die Zork von der Firma Inform. ä
+Später kamen weiter Textadventures, besonders bekannt war die Zork-Reihe von der Firma Inform.
 In den 80er Jahren wurden dann Textadventures von Grafik-Adventures abgelöst.
 Mit den Grafik und Textadventures hat man dann angefangen in Games Geschichten zu erzählen und bald danach sind Role-Playing Games dazugekommen.
 
@@ -22,7 +22,7 @@ Mit den Grafik und Textadventures hat man dann angefangen in Games Geschichten z
 
 Im Theater oder in Literatur wird eine Geschichte Linear erzählt jedoch in einem Game gibt es die Möglichkeit eine Non-Lineare Geschichte zu erzählen.
 Früher im Griechischen Theater gab es eine Einheit von Raum und Zeit das heisst wenn das Theater zwei Stunden lang dauert so dauert auch die Geschichte die erzählt wird zwei Stunden lang, später hat man mit Szenenwechsel Zeitsprünge vornehmen können.
-Bei einem Spiel kann man dies noch extremer tun indem man nicht nur die Zeit «aufbricht», sondern auch der Geschichte Freien lauf geben.
+Bei einem Spiel kann man dies noch extremer tun indem man nicht nur die Zeit «aufbricht», sondern auch der Geschichte Freien lauf gibt.
 Man verändert die Geschichte je nach dem was man in dem Spiel macht.
 Für Storyteller ist es viel anspruchsvoller eine Non-Lineare Geschichte zu schreiben in dem sie dem Spieler die Entscheidung lassen was und wann er es erlebt.
 Es gibt auch Techniken den Spieler etwas in Schranken zu halten.
@@ -32,7 +32,7 @@ Aufgrund von Reaktionen was der Spieler macht.
 
 == Filmregisseure über Games
 
-In einem Interview das <<bishop>> mit Steven Spielberg und George Lucas geführt hat, wird über Storytelling in Games diskutiert.
+In einem Interview das (<<bishop2013>>) mit Steven Spielberg und George Lucas geführt hat, wird über Storytelling in Games diskutiert.
 
 [quote]
 --
@@ -46,9 +46,9 @@ It’s simply a game."
 --
 
 George Lucas erklärt uns hier, dass es extrem schwer ist eine spannende Geschichte zu erzählen.
-Er sagt man führt die Zuschauer auf eine reise und zeigt ihnen was passiert.
-Es ist sehr Kompliziert und sehr vorsichtig zusammengeführt.
-Wenn man jetzt jeden einfach tuen lässt was man will ist es keine Story mehr, sondern einfach nur ein Game.
+Er sagt man führt die Zuschauer auf eine Reise und zeigt ihnen was passiert.
+Es ist sehr kompliziert und sehr vorsichtig zusammengeführt.
+Wenn man jetzt jeden einfach tun lässt was man will ist es keine Story mehr, sondern einfach nur ein Spiel.
 Wir verstehen was uns Lucas hier sagen will, jedoch sehen wir dies etwas anders.
 Es ist nicht einfach nur ein Spiel sondern der Spieler selber wird zum gestallter der Geschichte und kann diese erleben wie er es für sich persönlich gerne hätte.
 Das Spiel Rimworld ist ein gutes Beispiel.
@@ -81,26 +81,26 @@ It’s not a plot."
 Storytelling besteht nach George Lucas aus zwei dingen und zwar Charaktere und der Handlung.
 Charakter ist was man in Filmen und im TV hat.
 Dies ist etwas was die Spieleindustrie gerade für sich entdeckt.
-Es sei wie im Sport, es geht um Tebow(bekannter Football-Spieler).
-Es geht um Kobe(bekannter Basketball-spieler)
+Es sei wie im Sport, es geht um Tebow (bekannter Football-Spieler).
+Es geht um Kobe (bekannter Basketball-spieler)
 Die Spieleindustrie merkt jetzt das wenn sie sich auf die Charakter konzentrieren es das Spiel viel interesannter macht.
 
 Jedoch kann es in einem Spiel keine Handlung geben, es ist einfach so.
 Man kann ein Footballspiel nicht Planen.
 Man kann nicht planen das Christen Löwen zum frass vorgeworfen werden.
 
-Nun auch diese aussage finden wir etwas Fragwürdig.
+Nun auch diese aussage finden wir etwas fragwürdig.
 Für uns kann es auch in einem Spiel eine gute Handlung haben.
 Man nehme "The Witcher 3: The Wild Hunt" als Beispiel, ein Spiel welches auf einem Roman basiert.
 Jedoch sind wir uns sicher das jeder der das Spiel gespielt und das Buch gelesen hat sagen wird das in dem Spiel die Story viel besser rüber kommt als im Buch.
-Im Spiel geht es um Geralt von Riva der seine Tochter sucht.
-Auf der Suche nach seiner Tochter muss Geralt viele Abenteuer bestreiten.
+Im Spiel geht es um Geralt von Riva der seine Tochter Ciri sucht.
+Auf der Suche nach Ciri muss Geralt viele Abenteuer bestreiten.
 Er ist ein sogenanter Witcher, welcher spezielle fähigkeiten hat.
 Im Spiel werden neben der Hauptstory auch noch sehr viele zusatz Geschichten erzählt.
 Zum Beispiel die Geschichte des Roten Barons.
-Da der Rote Baron Ciri gesehen hat bittet Geralt den Baron ihm hinweise zu geben wo Ciri sein könnte.
+Da der Rote Baron Ciri gesehen hat bittet Geralt den Baron ihm hinweise zu geben wo sie sein könnte.
 Jedoch benötigt der Baron seine Hilfe.
-Auch seine Tochter und Frau sind verschwunden und er soll sie für ihn finden. 
+Auch seine Tochter und Frau sind verschwunden und er soll sie für ihn finden.
 Es gibt auch sehr gute beispiele von Spiele die nicht auf einem Buch basieren.
 Die "Mass Effect" Reihe welche eine sehr tiefgründige Story erzählt.
 Eines der besten Beispiele unserer Meinung nach ist die "The walking dead" Reihe in der eine packende Geschichte erzählt wird und man wie gebannt vor dem Bildschirm sitzt und mit Fiebert.
