--- a/source/Die entwicklung von Storys in Videogames.adoc
+++ b/source/Die entwicklung von Storys in Videogames.adoc
@@ -2,44 +2,48 @@
 
 ==
 
-Wie Sie in unserem Thema Fragestellung und Hypothese bereits erfahren haben, haben wir uns die Aufgabe gestellt eine Umfrage zum Thema Story in Games zu machen.
-Die Fragestellung lautet: Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert?
-Um diese Frage zu beantworten haben wir in unserer Umfrage verschiedene Fragen gestellt die zur beantwortung unserer Leitfrage dienten.
-Um ein besseres Bild der Befragten zu bekommen waren Fragen wie das Alter, seit wann sie Videospiele spielen, wie oft sie Spielen und wann sie angefangen haben Videospiele zu Spielen wichtig.
-Die Beantwortung unserer Leitfrage wurde von Fragen unterstützt wie welches Spiel hat die beste Story, wie wichtig ihnen Story in einem Videospiel ist, wie sie die Story gerne erleben und natürlich sind wie zufrienden sie mit der Story in heutigen Games sind.
-Wir haben den Link für die Umfrage in verscheidene Foren gestellt, auf Twitter und Facebook verbreitet und es an Freunde und Familie geschickt.
-Insgesamt haben über 100 Personen an der Umfrage teilgenommen.
-Uns ist bewusst das diese Umfrage nicht repräsentativ ist.
-Zum einen weil zu wenig Teilnehmer gefragt wurden.
-Es haben zu dem nur Personen teilgenommen die dies auch wollten.
-Die Selbstselektion ist deshalb kein Problem, weil sich die Umfrage an Gamer wendet und deshalb die Aussage der Umfrage vermutlich nicht beeinträchtigt ist.
+Unsere Fragestellung lautet: "Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert?"
+Wir haben versucht dieser Frage in unserer Umfrage nachzugehen.
+Um ein besseres Bild über die Befragten zu bekommen, waren Fragen nach dem Alter, seit wann und wie oft sie Videospiele spielen.
+Die Leitfrage untersuchten wir mit Fragen nach dem Spiel mit der besten Story, wie wichtig Story in einem Videospiel ist und natürlich wie zufrieden sie mit der Story in heutigen Games sind.
+Wir haben die Umfrage in verschiedene Gaming-Foren gestellt, Auf Twitter und Facebook verbreitet und es an Freunde und Familie geschickt.
+Insgesamt haben über 100 Personen an der Umfrage Teilgenommen.
+Uns ist bewusst, dass diese Umfrage nicht Representativ ist, weil nur wenige Teilnehemer, die diese Umfrage auch selber beantworten (Selbstselektion) wollten teilnahmen.
+Die Selbstselektion ist unserer Meinung nach kein Problem, weil sich die Umfrage an Gamer wendet und darum auch nur Leute mit affienität zum Spielen teilgenommen haben.
+Um die Qualität der Ausagen zu Quantifizieren haben wir den Standartfehler berrechnet, der Standartfehler ist zwei mal die Standerabweichung die wir wie folgt berechnen: Wir nehmen an das die Antworten aus der Umfrage gleichartig und unabhängig voneinander sind und deshalb Binominal verteilt sind.
+Den Standartfehler kann man dann mit der Formel blavblabla ausrechnen.
+Dabei ist P der gemessene Parameter und n die grösse der Population.
+Die Standartabweichung verändert sich mit der grösse P.
+Für die verscheidenen Fragen in unserer Umfrage schwankt die Standartabweichung zwichen 0.029 (für grosse P) und 0.045 (für P nahe 0.5).
+Der Standartfehler ist also zwischen 0.04 und 0.09.
+Der einfachheit halber rechenen wir durchgehend mit einem Fehler von ≈ 0.075.
 An unserer Umfrage haben 85% männliche Personen und 15% Weibliche Teilgenommen.
-Fast 80% der Teilnehemer waren über 23 Jahre alt davon 45% sogar über 30 Jahre alt.
-Wie man sieht ist der Hauptteil unseres Teilnehmerfeldes eher älter, was für uns gut ist, weil wir aus der Umfrage eine Einschätzung für das Gamen in den letzten 20 Jahren erhalten.
-Etwa 85% der Befragten haben bereits als Kinder unter 16 Jahren begonnen Videospiele zu spielen und etwa die Hälfte spielt heute noch täglich Videospiele.
+Fast 80% der Teilnehemer waren über 23 Jahre alt davon 45% soga über 30 Jahre alt.
+Wie man sieht ist der Hauptteil unseres Teilnehmerfeldes eher älter, was für uns gut ist, weil wir aus der Umfrage eine einschätzung für das Gamen in den letzten 20 Jahren erhalten.
+Etwa 85% der Befragten haben bereits als Kinder unter 16 Jahren begonnen Videospiele zu spielen und ca. die Hälfte spielt heute noch täglich Videospiele.
 20% spielen heute nicht mehr regelmässig Videospiele.
 Für über 80% der Teilnehmer ist die Storyline in einem Videospiel wichtig.
 30% davon sehen die Storyline als wichtigstes Element an und für über 50% ist die Story wichtig jedoch nicht das wichtigste.
 Die nächste Frage ist auch sehr spannend, wir fragten was in einem Spiel wichtiger sei, Story oder Gameplay.
 Etwa doppelt so viele Personen finden Gamplay wichtiger als Story.
 Bei der Frage wie diese Personen die Story erleben haben wir Herausgefunden das etwa 80% der befragten die Cutscenes und die Sprachausgabe ansehen.
-Da die Frage mehere Antwortsmöglichkeiten hatte, haben wir zudem erfahren das 50% zudem nach Storyelementen wie Tagebücher oder collecctabels suchen.
-Nur etwa 10% sind eher uninteresiert an der Story eines Spiels.
-Nun kommt eine der Wichtigsten Fragen der Umfrage, wir fragten:"Bist du mit der Storyline in Spielen seit 2012 zufrieden."
+Da die Frage mehere Antwoertsmöglichkeiten hatte, haben wir zudem erfahren das 50% zudem nach Storyelementen wie Tagebücher oder collecctabels suchen.
+Nur etwa 10% ist eher uninteresiert an der Story eines Spiels.
+Nun kommt eine der Wichtigsten Fragen der Umfrage, wir fragten:"Bist du mit der Storyline in Spielen seit 2012 zufreiden."
 Die Antwoert hat uns sehr überascht.
 
 
-Etwa ein Drittel der Befragten erlebt eine Story lieber alleine in einem Singleplayer Spiel, wobei der Rest die Story auch gerne im Multiplayer mit Mitspielern erlebt.
+Ca. ein Drittel der Befragten erlebt eine Story leiber alleine in einem Singleplayer Spiel, wobei der rest die Story auch gerne im Multiplayer mit Mitspielern erlebt.
 Was braucht eine gute Story, nun fast alle der Befragten waren sich einig das gute Charakter und Spannung sehr wichtige Elemente eines Videospiels sind.
 Emotionen waren auch hoch mit dabei.
-Wir liessen den Teilnehemer die Wahl noch eigene Antworten zu dieser Frage zu schreiben und bekammen sehr viele einzelne Antworten.
+wir leisen den Teilnehemer die wahl noch eigene antworten zu dieser Frage zu schreiben und bekammen sehr viele einzelne Antwoerten.
 Für eine Person war die Immersion sehr wichtig, also er will sich im Spiel verlieren und ganz in die Welt abtauchen.
-Eine sehr spannende antwoer war, das sich eine Person wünscht, dass der Spieler ethische Fragen beantworten muss.
-Nun zum Schluss fragten wir welches Spiel die beste Story ihrer Meinung nach habe.
-Wir bekammen etliche Antworten und sehen einige Verbindungen zu unserer Arbeit.
-Um die Antworten etwas zu gliedern haben wir Spiele Reihen als eine Antwort gesehen.
-Zudem haben wir Witz Antworten wie Candy Crush oder Tetris nicht zur Kenntnis genommen.
+Eine sehr spannende antwoer war, das sich eine Person wünscht, dass der Spieler Ethisch Fragen beantworten muss.
+Nun zum schluss fragten wir welches Spiel die beste Story ihrer meinung nach habe.
+Wir bekammen entliche Antworten und sehen einige verbindungen zu unserer Arbeit.
+Um die Antworten etwas zu Gliedern haben wir Spiele Reihen als eine Antwort gesehen.
+Zudem haben wir Witz antwoerten wie Candy Crush oder Tetris nicht zur kenntnis genommen.
 Die absolute Top-antwort war The Witcher 3: Wild Hunt mit 14 Pukten.
 Die zweit meisste Antwort war die Mass Effect Reihe (ohne Mass Effect Andromeda) mit 5 Punkten.
 Half-Life 2 und The last of us Teilen sich den dritten Platz mit 4 Punkten.
-Danach gibt es sehr viele Antworten mit 3 Punkten wie Life is Strange, Metal Gear Solid-Reihe, Day of the Tentacle und die Unchartet Reihe.
+Danach gibt es sehr viele Antworten mit 3 Punkten wie Life is Strange, Metal Gear Solid-Reihe, Day of the Tentacle und die Untchartet Reihe.
